Remove internal model of plan builder and replace by winery model (#207)
* removes parts of the internal plan builder model an refactors code to use the winery model only
* Code cleanup